Fix css width to stop bleed on higher resolutions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ p {
 /* Style main smaller text */
 .smallermain {
   font-size: 85%;
-  max-width: 80%;
+  max-width: 700px;
   display: inline-block;
   margin-top: 4px;
   text-align: left;
@@ -76,7 +76,7 @@ p {
 /* Style picture text history */
 .smallerpichis {
   font-size: 75%;
-  max-width: 80%;
+  max-width: 700px;
   display: inline-block;
   margin-top: 4px;
   text-align: left;
